--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ build-backend = "flit_core.buildapi"
 requires_python = ">=3.10"
 
 
-
 [project]
 name = "eth-abi-tool"
+version = "0.0.1"
 authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
@@ -18,7 +18,8 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10"
 ]
-dynamic = ["version", "description"] 
+dynamic = ["description"]
+
 
 dependencies = [
   "click",
