--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,6 @@ requires_python = ">=3.10"
 
 [project]
 name = "eth-abi-tool"
-version = "0.0.1"
 authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
 readme = {file = "README.md", content-type = "text/markdown"}
 license = {file = "LICENSE"}
@@ -18,7 +17,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10"
 ]
-dynamic = ["description"]
+dynamic = ["version", "description"]
 
 
 dependencies = [
