--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,10 @@ setenv =
     TESTING = 1
 passenv =
     DEBUG
+    EXPLORER_CHAIN
+    EXPLORER_API_KEY
+    EXPLORER_GATEWAY
+
 commands =
     pip install -U pip .[dev] 
     pytest {env:PYTEST_OPTIONS} --basetemp={envtmpdir}
@@ -22,7 +26,7 @@ commands =
 [flake8]
 max-line-length = 79
 show-source = False
-max-complexity = 10
+max-complexity = 12
 extend-ignore =
   E501,
   W505
