update docs; add dependency, fmt/lint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
   "eth-hash[pycryptodome]",
   "eth-utils",
   "python-box",
+  "ratelimiter",
   "requests",
   "tablib[cli,yaml]"
 ]
