--- a/tox.ini
+++ b/tox.ini
@@ -11,11 +11,11 @@ commands = flake8 eth_abi_tool tests
 setenv =
     PYTHONPATH = {toxinidir}
     TESTING = 1
+    EXPLORER_CHAIN = goerli
+    EXPLORER_GATEWAY = Etherscan
 passenv =
     DEBUG
-    EXPLORER_CHAIN
     EXPLORER_API_KEY
-    EXPLORER_GATEWAY
 
 commands =
     pip install -U pip .[dev] 
