--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@ jobs:
             . venv/bin/activate
             pip install --upgrade pip setuptools wheel
             export PROJECT_DIR=$(pwd)
+            pwd
+            ls -al
             make dev
             pip install --upgrade tox-pyenv
       - run:
