--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,10 @@ jobs:
       - image: rstms/python-hydra:1.0.2
     steps:
       - checkout
+        path: eth-abi-tools   
       - run:
           name: Install Dependencies
           command: |
-            mkdir eth-abi-tool
-            mv * eth-abi-tool
             python -m venv venv
             . venv/bin/activate
             pip install --upgrade pip setuptools wheel
