--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
+            cd eth-abi-tool
             python -m venv venv
             . venv/bin/activate
             pip install --upgrade pip setuptools wheel
@@ -27,5 +28,6 @@ jobs:
       - run:
           name: Run All Tests
           command: |
+            cd eth-abi-tool
             . venv/bin/activate
             make tox
